# song-book

./: .gitignore  AGENTS.md  LICENSE  Makefile  Pipfile  README.md  manage.py  pylint-check.sh  pylintrc  pyproject.toml
.github/workflows/: songbook.yml
analytics/: apps.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_auto_20211212_0917.py  0003_daystatistic_tenant.py  0004_alter_daystatistic_id.py  0005_alter_daystatistic_hits.py
backend/: admin.py  apps.py  auth.py  fields.py  forms.py  generic.py  menus.py  mixins.py  models.py  urls.py  utils.py  views.py
backend/auth/: __init__.py  mixins.py
backend/markdown/: chords.py  chords_pdf.py  spaces.py
backend/middleware/: __init__.py  cache.py  settings.py
backend/migrations/: 0001_initial.py  0002_auto_20191109_0858.py  0003_auto_20191109_0912.py  0004_auto_20191109_1019.py  0005_auto_20191124_1327.py  0006_category_20200809_0529.py  0007_auto_20200918_1217.py  0008_auto_20201018_0833.py  0009_auto_20210131_1025.py  0010_alter_song_categories.py  0011_song_archived.py  0012_rename_prerendered_pdf_song_prerendered_and_more.py  0013_alter_song_categories.py  0014_alter_song_capo.py
backend/static/: styles.css  styles.sass
backend/templatetags/: markdown.py  utils.py
category/: admin.py  apps.py  forms.py  menus.py  models.py  urls.py  utils.py  views.py
category/migrations/: 0001_initial.py  0002_auto_20200918_1217.py  0003_auto_20200925_1902.py  0004_alter_category_options.py  0005_category_filename_category_image_category_margin_and_more.py  0006_category_link.py  0007_remove_category_show_title.py  0008_category_public.py  0009_category_tenant.py  0010_alter_category_name_alter_category_slug_and_more.py  0011_alter_category_options.py  0012_alter_category_link.py  0013_category2.py  0013_rework_pdfs.py  0014_delete_category.py  0015_rename_category2_category.py  0016_alter_category_generate_pdf_alter_category_slug.py  0017_alter_category_unique_together_and_more.py
chords/: asgi.py  markdown.py  settings.py  urls.py  widgets.py  wsgi.py
chords/markdown/: chords.py  chords_pdf.py  spaces.py
chords/plugins/: chords.py  paragraph.py  spaces.py
chords/settings/: base.py  development.py  production.py.tpl  test.py
chords/static/: _colors.sass  navbar4.css  navbar4.css.map  styles.css  styles.css.map  styles.sass
docs/: FILES.md
frontend/: apps.py
pdf/: __init__.py  admin.py  apps.py  cachemenuitem.py  forms.py  generate.py  locales.py  menus.py  models.py  storage.py  urls.py  utils.py  views.py
tenants/: admin.py  apps.py  forms.py  menus.py  middleware.py  models.py  urls.py  utils.py  views.py
tests/: conftest.py  test_all_songs_json.py  test_cache_invalidation.py  test_category_songs_json.py  test_etag.py
(+142 files in other folders)
