[project]
name = "chords"
version = "0.1.0"
description = "Song book written in Django, supporting offline viewing"
readme = "README.md"
authors = [{ name = "Petr Hála", email = "phala@sprtovo.eu" }]
requires-python = ">=3.12"

dependencies = [
  "django>=5",
  "django_bootstrap5",
  "django-debug-toolbar",
  "django-markdownx>=4.0.0b1",
  "django-redis",
  "huey",
  "django-simple-menu",
  "django-weasyprint",
  "weasyprint>=66",
  "Pillow",
  "mistune>3",
  "django-polymorphic",
]

[dependency-groups]
production = [
  "psycopg[binary,pool]>=3.1.10",
  "gunicorn",
  "gevent",
  "netifaces",
]
dev = [
  "pylint",
  "pylint-django",
  "black",
]

[tool.uv]
default-groups = []

[tool.black]
line-length = 120

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.DESIGN]
min-public-methods = 1
max-parents = 12
disable = [
  "duplicate-code",
  "fixme",
  "redefined-outer-name",
  "too-many-arguments",
  "too-few-public-methods",
]

[tool.pylint.MAIN]
ignore-patterns = "\\d{4}_.*?.py"
load-plugins = "pylint_django"