[project]
name = "chords"
version = "0.1.0"
description = "Song book written in Django, supporting offline viewing"
readme = "README.md"
authors = [{ name = "Petr Hála", email = "phala@sprtovo.eu" }]
requires-python = ">=3.12"

dependencies = [
  "django>=5",
  "django_bootstrap5",
  "django-debug-toolbar",
  "django-markdownx>=4.0.0b1",
  "django-redis",
  "huey",
  "django-simple-menu",
  "django-weasyprint",
  "weasyprint>=66",
  "Pillow",
  "mistune>3",
  "django-polymorphic",
]

[dependency-groups]
production = [
  "psycopg[binary,pool]>=3.1.10",
  "gunicorn",
  "gevent",
  "netifaces",
]
dev = [
  "ruff"
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120
target-version = "py314"
