[project]
name = "chords"
version = "0.1.0"
description = "Song book written in Django, supporting offline viewing"
readme = "README.md"
authors = [{ name = "Petr Hála", email = "phala@sprtovo.eu" }]
requires-python = ">=3.12"

dependencies = [
  "django>=5",
  "django_bootstrap5",
  "django-debug-toolbar",
  "django-markdownx>=4.0.0b1",
  "django-redis",
  "huey",
  "django-simple-menu",
  "django-weasyprint",
  "weasyprint>=66",
  "Pillow",
  "mistune>3",
  "django-polymorphic",
]

[dependency-groups]
production = [
  "psycopg[binary,pool]>=3.3.3",
  "gunicorn",
  "gevent",
  "netifaces",
]
dev = [
  "pytest>=9.0.3",
  "pytest-django>=4.12.0",
  "ruff",
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "chords.settings.test"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py314"
